vendored_parsers/tree-sitter-ada/grammar.js
      compilation: $ => repeat(
         $.compilation_unit,
      ),

      identifier: $ =>
         /[a-zA-Z\u{80}-\u{10FFFF}][0-9a-zA-Z_\u{80}-\u{10FFFF}]*/u,
      string_literal: $ => token(/"(""|[^"])*"/),
      numeric_literal: $ => token(
         choice(
            /[0-9][0-9_]*(\.[0-9_]+)?([eE][+-]?[0-9_]+)?/,
            /[0-9]+#[0-9a-fA-F._-]+#([eE][+-]?[0-9_]+)?/,
         )
      ),
      relational_operator: $ => choice('=', '/=', '<', '<=', '>', '>='),
      binary_adding_operator: $ => choice('+', '-', '&'),
      _name_not_function_call: $ => choice(           // RM 4.1
         $.identifier,
         $.gnatprep_identifier,
         $.selected_component,
         $._attribute_reference,
         $.qualified_expression,
         $.target_name,
         $.slice,
         // $.explicit_dereference, // covered by $.selected_component
         $.character_literal,
         $.string_literal, // name of an operator. However, in a number of
                           // places using a string doesn't make sense.
      ),
      _name: $ => choice(           // RM 4.1
         $._name_not_function_call,
         $.function_call,
      ),
      _name_for_component_choice: $ => choice(
         // Do not allow slice, function_call,... as opposed to what RM allows
         $.identifier,
         $.string_literal,
      ),

      selected_component: $ => prec.left(seq(   // RM 4.1.3
         field('prefix', $._name),
         seq(
            '.',
            field('selector_name', choice(
               $.identifier,
               $.character_literal,
               $.string_literal,
            )),
         ),
      )),
      _defining_identifier_list: $ => comma_separated_list_of($.identifier),
      _discrete_subtype_definition: $ => choice(
         $._subtype_indication,
         $.range_g,
      ),
      _loop_parameter_subtype_indication: $ => choice(
         $._subtype_indication,
         $.access_definition,
      ),
      iterator_specification: $ => seq(       // ARM 5.5.2
         $.identifier,
         optional(seq(
            ':',
            $._loop_parameter_subtype_indication,
         )),
         choice(
            reservedWord('in'),
            reservedWord('of'),
         ),
         optional(reservedWord('reverse')),
         field('iterator_name', $._name),
         optional($.iterator_filter),
      ),
      compilation_unit: $ => choice(
         $.with_clause,
         seq(
            optional(reservedWord('private')),
            $._declarative_item,
         ),
         $._statement,
         $.subunit,
         $.entry_declaration,
      ),
      _declarative_item: $ => choice(
         $._basic_declarative_item,
         $._proper_body,
         $.body_stub,
      ),
      package_declaration: $ => seq(
         $._package_specification,
         ';',
      ),
      _package_specification: $ => seq(
         reservedWord('package'),
         field('name', $._name),
         optional($.aspect_specification),
         reservedWord('is'),
         repeat($._basic_declarative_item_pragma),
         optional(seq(
             reservedWord('private'),
             repeat($._basic_declarative_item_pragma),
         )),
         reservedWord('end'),
         field('endname', optional($._name)),
      ),
      subprogram_body: $ => seq(      // ARM 6.3
         optional($.overriding_indicator),
         $._subprogram_specification,
         optional($.aspect_specification),
         reservedWord('is'),
         optional($.non_empty_declarative_part),
         reservedWord('begin'),
         $.handled_sequence_of_statements,
         reservedWord('end'),
         optional(field('endname', $._name)),
         ';'
      ),
      package_body: $ => seq(
         reservedWord('package'),
         reservedWord('body'),
         field('name', $._name),
         optional($.aspect_specification),
         reservedWord('is'),
         optional($.non_empty_declarative_part),
         optional(seq(
            reservedWord('begin'),
            $.handled_sequence_of_statements,
         )),
         reservedWord('end'),
         optional(field('endname', $._name)),
         ';',
      ),
      _subtype_indication: $ => seq(        // ARM 3.2.2
         optional($.null_exclusion),
         field('subtype_mark', $._name_not_function_call),
         optional($._constraint),
      ),
      range_g: $ => choice(                         //  ARM 3.5
         field('range_attribute_reference', seq(    //  ARM 4.1.4
            field('prefix', $._name),
            $.tick,
            $.range_attribute_designator,
         )),
         seq(
            $._simple_expression,
            '..',
            $._simple_expression,
         ),
      ),
      expression: $ => choice(
         list_of(seq(reservedWord('and'), optional(reservedWord('then'))),
                 $._relation),
         list_of(seq(reservedWord('or'), optional(reservedWord('else'))),
                 $._relation),
         list_of(reservedWord('xor'), $._relation),
      ),
      _relation: $ => choice(                            // RM 4.4
         seq(
            $._simple_expression,
            optional(seq(
               $.relational_operator,
               $._simple_expression,
            )),
         ),
         $.relation_membership,
         $.raise_expression,                           // Added Ada 20x
      ),
      relation_membership: $ => seq(   //  Split from _relation RM 4.4
         $._simple_expression,
         optional(reservedWord('not')),
         reservedWord('in'),
         $.membership_choice_list,
      ),

      raise_expression: $ => prec.right(1, seq(        // ARM 11.3
         reservedWord('raise'),
         field('exception_name', $._name),
         optional(seq(
            reservedWord('with'),
            $._simple_expression,
         )),
      )),
      membership_choice_list: $ => prec.right(
         list_of('|', $._membership_choice),
      ),
      _membership_choice: $ => choice(
         $._simple_expression,
         $.range_g,
      ),
      _simple_expression: $ => seq(
         optional($.unary_adding_operator),
         $.term,
         repeat(seq(
            $.binary_adding_operator,
            $.term,
         )),
      ),

      // Keep term as an explicit node in the tree to resolve priorities of
      // operations.
      term: $ => seq(
         $._factor,
         repeat(seq(
            $.multiplying_operator,
            $._factor,
         )),
      ),
      _factor: $ => choice(     // ARM 4.4
         $._primary,
         $.factor_power,
         $.factor_abs,
         $.factor_not,
      ),
      _parenthesized_expression: $ => seq(
         '(',
         choice(
            $.expression,
            $._conditional_expression,
            $.quantified_expression,
            $.declare_expression,
         ),
         ')',
      ),

      // _primary might resolve as an '_aggregate', which might resolve as
      // a 'position_array_aggregate', so an expression like
      //     case ( .. )
      // is ambiguous. So we raise the priority here.
      access_definition: $ => seq(          // ARM 3.10
         optional($.null_exclusion),
         reservedWord('access'),
         choice(
            seq(
               optional(reservedWord('constant')),
               field('subtype_mark', $._name),
            ),
            seq(
               optional(reservedWord('protected')),
               reservedWord('procedure'),
               optional($.formal_part),
            ),
            seq(
               optional(reservedWord('protected')),
               reservedWord('function'),
               $._parameter_and_result_profile,
            ),
         ),
      ),
      actual_parameter_part: $ => seq(    // ARM 6.4
         '(',
         choice(
            comma_separated_list_of($.parameter_association),

            // Those are not in the ARM, but added here for generic
            // instantiations, which get the actual parameter part via $._name
            // and its $.function_call
            // ????
            $._conditional_expression,
            $.quantified_expression,
            $.declare_expression,
         ),
         ')',
      ),

      // RM 6.4, but this one also handles parameters for generic
      // instantiations.
      parameter_association: $ => choice(
         seq(
            $.component_choice_list,
            '=>',
            choice(
               $.expression,
               '<>',
            ),
         ),
         $.expression,
         '<>',
       ),
      _conditional_expression: $ => choice(
         $.if_expression,
         $.case_expression,
      ),
      quantified_expression: $ => seq(          // ARM 4.5.8
         reservedWord('for'),
         $.quantifier,
         choice(
            $.loop_parameter_specification,
            $.iterator_specification,
         ),
         '=>',
         field('predicate', $.expression),
      ),
      declare_expression: $ => seq(
         reservedWord('declare'),
         repeat($._declare_item),
         reservedWord('begin'),
         $.expression,
      ),
      _declare_item: $ => choice(
         $.object_declaration,
         $.object_renaming_declaration,
      ),
      quantifier: $ => choice(
         reservedWord('all'),
         reservedWord('some'),
      ),
      case_expression: $ => seq(                         // RM 4.5.7
         reservedWord('case'),
         $.expression,
         reservedWord('is'),
         comma_separated_list_of($.case_expression_alternative),
      ),
      case_expression_alternative: $ => seq(             // RM 4.5.7
         reservedWord('when'),
         $.discrete_choice_list,
         '=>',
         $.expression,
      ),
      component_choice_list: $ => choice(                 // RM 4.3.1
         reservedWord('others'),
         list_of('|', $._name_for_component_choice),
      ),
      _aggregate: $ => choice(                            // RM 4.3
         $.record_aggregate,
         $.extension_aggregate,
         $._array_aggregate,
         $._delta_aggregate,                              // Ada 20x
      ),
      null_exclusion: $ => seq(
         reservedWord('not'),
         reservedWord('null'),
      ),
      _discrete_subtype_definition: $ => choice(
         $._subtype_indication,
         $.range_g,
      ),
      _interface_list: $ =>
         list_of(reservedWord('and'), $._name),
      component_declaration: $ => seq(    // RM 3.8
         $._defining_identifier_list,
         ':',
         $.component_definition,
         optional($._assign_value),
         optional($.aspect_specification),
         ';'
      ),
      component_definition: $ => seq(
         optional(reservedWord('aliased')),
         choice(
            $._subtype_indication,
            $.access_definition,
         ),
      ),
      named_array_aggregate: $ => choice(
         seq('(', $._array_component_association_list, ')'),
         seq('[', $._array_component_association_list, ']'),
      ),
      _array_component_association_list: $ =>
         comma_separated_list_of($.array_component_association),
      array_component_association: $ => choice(    // ARM 4.3.3
         seq(
            $.discrete_choice_list,
            '=>',
            choice(
               $.expression,
               '<>',
            ),
         ),
         $.iterated_element_association,
      ),
      discrete_choice_list: $ => list_of('|', $.discrete_choice),
      discrete_choice: $ => choice(    // ARM 3.8.1
         $.expression,
         $._subtype_indication,
         $.range_g,
         reservedWord('others'),
      ),
      aspect_association: $ => seq(
         $._aspect_mark,
         optional(seq(
            '=>',
            $._aspect_definition,
         )),
      ),
      _aspect_definition: $ => choice(
         $.expression,
         $.global_aspect_definition,
      ),
      _aspect_mark: $ => seq(   // ARM 13.1.1
         $.identifier,
         optional(seq(
            $.tick,
            reservedWord('Class'),
         )),
      ),
      aspect_mark_list: $ => comma_separated_list_of($.aspect_association),
      aspect_specification: $ => seq(
         reservedWord('with'),
         $.aspect_mark_list,
      ),
      _assign_value: $ => seq(
         ':=',
         $.expression,
      ),
      body_stub: $ => choice(
         $.subprogram_body_stub,
         $.package_body_stub,
         $.task_body_stub,
         $.protected_body_stub,
      ),
      subprogram_body_stub: $ => seq(
         optional($.overriding_indicator),
         $._subprogram_specification,
         reservedWord('is'),
         reservedWord('separate'),
         optional($.aspect_specification),
         ';',
      ),
      package_body_stub: $ => seq(
         reservedWord('package'),
         reservedWord('body'),
         $.identifier,
         reservedWord('is'),
         reservedWord('separate'),
         optional($.aspect_specification),
         ';',
      ),
      task_body_stub: $ => seq(
         reservedWord('task'),
         reservedWord('body'),
         $.identifier,
         reservedWord('is'),
         reservedWord('separate'),
         optional($.aspect_specification),
         ';',
      ),
      _protected_operation_declaration: $ => choice(
         $.subprogram_declaration,
         $.pragma_g,
         $.entry_declaration,
         $._aspect_clause,
      ),
      _protected_element_declaration: $ => choice(
         $._protected_operation_declaration,
         $.component_declaration,
      ),
      _protected_operation_item: $ => choice(
         $.subprogram_declaration,
         $.subprogram_body,
         $.null_procedure_declaration,
         $.expression_function_declaration,
         $.entry_body,
         $._aspect_clause,
      ),
      protected_definition: $ => seq(
         repeat($._protected_operation_declaration),
         optional(seq(
            reservedWord('private'),
            repeat($._protected_element_declaration),
         )),
         reservedWord('end'),
         optional($.identifier),
      ),
      single_protected_declaration: $ => seq(
         reservedWord('protected'),
         $.identifier,
         optional($.aspect_specification),
         reservedWord('is'),
         optional(seq(
            reservedWord('new'),
            $._interface_list,
            reservedWord('with'),
         )),
         $.protected_definition,
         ';',
      ),
      protected_body: $ => seq(
         reservedWord('protected'),
         reservedWord('body'),
         $.identifier,
         optional($.aspect_specification),
         reservedWord('is'),
         repeat($._protected_operation_item),
         reservedWord('end'),
         optional($.identifier),
         ';',
      ),
      protected_body_stub: $ => seq(
         reservedWord('protected'),
         reservedWord('body'),
         $.identifier,
         reservedWord('is'),
         reservedWord('separate'),
         optional($.aspect_specification),
         ';',
      ),
      _declarative_item_pragma: $ => choice(
         $._declarative_item,
         $.pragma_g,
         $.gnatprep_declarative_if_statement,
      ),

      // Although it doesn't add any new character, we keep this rule as an
      // expplicit node in the tree for the sake of queries
      non_empty_declarative_part: $ => repeat1(
         $._declarative_item_pragma,
      ),
      entry_declaration: $ => seq(
         optional($.overriding_indicator),
         reservedWord('entry'),
         field('entry_name', $.identifier),
         optional(seq(
            '(',
            $._discrete_subtype_definition,
            ')',
         )),
         optional($.formal_part),
         optional($.aspect_specification),
         ';',
      ),
      entry_barrier: $ => seq(
         reservedWord('when'),
         field('condition', $.expression),
      ),
